# on-premise-data-pipeline

./: docker-compose.yaml  setup.cfg  setup.py
.github/workflows/: python-app.yml
docker/spark/conf/: spark-defaults.conf
docker/superset/: Dockerfile
faker/: FakerGeneratorInterface.py  ProductGenerator.py  TransactionGenerator.py  UserGenerator.py  schedule.sh  test.ipynb
monitoring/logs/: logging.txt  product_logs.txt  transaction_logs.txt  user_logs.txt
src/ETLPipeline.egg-info/: PKG-INFO  SOURCES.txt
src/ETLPipeline/utils/: __init__.py  logger.py
