[metadata]
name = OnPremiseDataPipeline
version = 1.0
author = hao-dang
author_email = haodang2311@gmail.com
description = Data Pipeline built by on-premise tools
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pydantic==2.7.1
    pytest==8.2.0

[options.packages.find]
where = src