[metadata]
name = ETLPipeline
version = 0.1.0
author = hao-dang
author_email = hao.dang@techxcorp.com
description = ETL pipeline source code
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    psycopg2==2.9.9
    pandas==2.2.2
[options.packages.find]
where = src